Implementação da visão gerencial diária

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -91,6 +91,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 m6">
+                    <div class="card grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Visão gerencial diária</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/daily-view}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
