--- a/src/main/resources/templates/layouts/_header.html
+++ b/src/main/resources/templates/layouts/_header.html
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<link rel='stylesheet' th:href="@{/css/fullcalendar.css}" />s
+<link rel='stylesheet' th:href="@{/css/fullcalendar.css}" />
 <script th:src="@{/js/lib/jquery.min.js}"></script>
 <script th:src="@{/js/lib/moment.min.js}"></script>
 <script th:src="@{/js/fullcalendar.js}"></script>
