--- a/src/main/resources/templates/form_background.html
+++ b/src/main/resources/templates/form_background.html
@@ -26,7 +26,7 @@
                 <button class="waves-effect waves-light btn" type="submit">Salvar
                     <i class="material-icons right">send</i>
                 </button>
-                <a href="/patient" class="waves-effect waves-light btn">Voltar</a>
+                <a href="/background" class="waves-effect waves-light btn">Voltar</a>
             </form>
         </div>
     </div>
