--- a/src/main/resources/templates/form_patient.html
+++ b/src/main/resources/templates/form_patient.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="input-field col s6">
                         <select th:field="*{backgrounds}" multiple>
-                            <option value="" disabled>Selecione os atencedentes</option>
+                            <option value="" disabled>Selecione os antencedentes</option>
                             <option th:each="background : ${backgrounds}" th:value="${{background}}"
                                     th:text="${background}">
                             </option>
