--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -79,6 +79,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 m6">
+                    <div class="card orange darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Usuários</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/user}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col s12 m6">
