--- a/src/main/resources/templates/layouts/_scripts.html
+++ b/src/main/resources/templates/layouts/_scripts.html
@@ -11,5 +11,5 @@
 
     <script type="text/javascript" th:src="@{/js/lib/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/lib/moment.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/lib/fullcalendar.js}"></script>
+    <script type="text/javascript" th:src="@{/js/fullcalendar.js}"></script>
 </html>
