--- a/src/main/resources/templates/layouts/app.html
+++ b/src/main/resources/templates/layouts/app.html
@@ -3,7 +3,8 @@
 <head>
     <title>Anesthesia</title>
     <th:block th:include="layouts/_css"></th:block>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8"/>
 </head>
 <body>
     <header th:include="layouts/_header">
