--- a/src/main/resources/templates/form_consult.html
+++ b/src/main/resources/templates/form_consult.html
@@ -14,28 +14,30 @@
                 </nav>
             </div>
             <th:block th:include="message"></th:block>
-            <form action="#" th:action="@{/consults}" th:object="${consults}" method="post">
+            <form action="#" th:action="@{/consult}" th:object="${consult}" method="post">
                 <div class="input-field col s2">
-                    <input id="birthday" th:field="*{date}" type="text" class="datepicker">
-                    <label for="birthday">Data de Nascimento</label>
+                    <input id="date" th:field="*{date}" type="text" class="datepicker">
+                    <label for="date">Data da Consulta</label>
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
                         <select name="medicalProcedure" id="medicalProcedure">
                             <option value="">Selecione um Procedimento</option>
                             <option th:each     ="medicalprocedure : ${medicalprocedures}"
-                                    th:selected ="${medicalprocedure == process.medicalProcedure}"
-                                    th:value    ="${medicalprocedure.id}"
-                                    th:text     ="${medicalprocedure.name}"></option>
+                                    th:selected ="${medicalprocedure == process}"
+                                    th:value    ="${medicalprocedure}"
+                                    th:text     ="${medicalprocedure.getPacienteMedico()}"></option>
                         </select>
                     </div>
                 </div>
 
+                <button class="waves-effect waves-light btn" type="submit">Salvar
+                    <i class="material-icons right">send</i>
+                </button>
+                <a href="/consult" class="waves-effect waves-light btn">Voltar</a>
+
             </form>
-            <button class="waves-effect waves-light btn" type="button" onclick="clickBtnSalvar()">Salvar
-                <i class="material-icons right">send</i>
-            </button>
-            <a href="/process" class="waves-effect waves-light btn">Voltar</a>
+
         </div>
     </div>
     <script th:src="@{/js/form_patient.js}"></script>
