criando tabela consult

--- a/src/main/resources/templates/index_consult.html
+++ b/src/main/resources/templates/index_consult.html
@@ -30,7 +30,7 @@
                     <div class="col s1">
                         <div class="row">
                             <div class="col s6">
-                                <a href="/exam" class="btn-floating btn-large waves-effect waves-light blue"><i
+                                <a href="/consult" class="btn-floating btn-large waves-effect waves-light blue"><i
                                         class="material-icons">clear_all</i></a>
                             </div>
                             <div class="col s6">
@@ -52,9 +52,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="consult : ${consults}">
-                    <td><span th:text="${consults.id}"></span></td>
-                    <td><span th:text="${consults.number}"></span></td>
+                <tr th:each="consult : ${consult}">
+                    <td><span th:text="${consult.id}"></span></td>
                     <td>
                         <a class="btn-floating btn-small waves-effect waves-light blue delete"
                            th:data-url="${(#mvc.url('CC#deleteConsult').arg(0, consult.id)).build()}"><i
