--- a/src/main/resources/templates/report_index.html
+++ b/src/main/resources/templates/report_index.html
@@ -12,6 +12,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12 m6">
+                <div class="card red darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Relatório de Processos</span>
+                    </div>
+                    <div class="card-action">
+                        <a th:href="@{/report/process-report}">Clique aqui</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
