consult layaut melhorias

--- a/src/main/resources/templates/form_consult.html
+++ b/src/main/resources/templates/form_consult.html
@@ -19,6 +19,7 @@
                     <input id="date" th:field="*{date}" type="text" class="datepicker">
                     <label for="date">Data da Consulta</label>
                 </div>
+
                 <div class="row">
                     <div class="input-field col s6">
                         <select name="medicalProcedure" id="medicalProcedure">
@@ -28,8 +29,25 @@
                                     th:value    ="${medicalprocedure}"
                                     th:text     ="${medicalprocedure.getPacienteMedico()}"></option>
                         </select>
+
                     </div>
+
                 </div>
+
+                <div class="row">
+                    <div class="input-field col s6">
+                        <select name="medicalProcedure" id="medicalProcedure">
+                            <option value="">Selecione um Procedimento</option>
+                            <option th:each     ="medicalprocedure : ${medicalprocedures}"
+                                    th:selected ="${medicalprocedure == process}"
+                                    th:value    ="${medicalprocedure}"
+                                    th:text     ="${medicalprocedure.getPacienteMedico()}"></option>
+                        </select>
+
+                    </div>
+
+                </div>
+
 
                 <button class="waves-effect waves-light btn" type="submit">Salvar
                     <i class="material-icons right">send</i>
