--- a/src/main/resources/templates/form_patient-report.html
+++ b/src/main/resources/templates/form_patient-report.html
@@ -39,6 +39,7 @@
                     </div>
                 </form>
             </div>
+            <th:block th:include="message"></th:block>
         </div>
     </div>
 </div>
