--- a/src/main/resources/templates/report_index.html
+++ b/src/main/resources/templates/report_index.html
@@ -23,6 +23,40 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card brown darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Relatório de Cadastros</span>
+                    </div>
+                    <div class="card-action">
+                        <a th:href="@{/report/crud-report}">Clique aqui</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card green darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Relatório de Ausências</span>
+                    </div>
+                    <div class="card-action">
+                        <a th:href="@{/report/absence-report}">Clique aqui</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card purple darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Relatório de Adiamentos</span>
+                    </div>
+                    <div class="card-action">
+                        <a th:href="@{/report/postponement-report}">Clique aqui</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </html>
